<resources>
    <string name="app_name">My First App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button">"Button"</string>
    <string name="delete_item_button">"Delete Item"</string>
    <string name="insert_item_button">"Insert Item"</string>
    <string name="Sort_item_button">"Sort Item"</string>
    <string name="default_pix">"Pic here"</string>
    <string name="email">"Email"</string>
    <string name="working1">"Working with ConstraintLayout"</string>
    <string name="description">"Chains are used to control the positioning and alignment of multiple views along a single axis (horizontal or vertical)"</string>
    <string name="phone_alt">03016691397</string>
    <string name="btn_call_now">Call Now</string>
    <string name="okay_button">okay</string>
    <string name="name_alt">name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="chat_fragment">Chat Fragments Ui Here</string>
    <string name="calls_fragment">Calls Fragment Ui here</string>
    <string name="updates_fragment">Updates Fragment Ui here</string>
    <string name="login_button">Login</string>
    <string name="password_string">Password</string>
    <string name="e_mail_string">E-mail</string>
    <string name="login_welcome">Welcome to login Screen</string>
    <string name="btn_log_out">Log out</string>
    <string name="person_image">person image</string>
</resources>