<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/dialog_bg"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgViewDialogPersonImg"
        android:layout_width="0dp"
        android:layout_height="231dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="96dp"
        android:contentDescription="@string/default_pix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/man1" />

    <TextView
        android:id="@+id/tvDialogPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/name_alt"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgViewDialogPersonImg"
        app:layout_constraintStart_toStartOf="@+id/imgViewDialogPersonImg"
        app:layout_constraintTop_toBottomOf="@+id/imgViewDialogPersonImg" />

    <TextView
        android:id="@+id/tvDialogPersonContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/phone_alt"
        android:textSize="34sp"


        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/tvDialogPersonName"
        app:layout_constraintStart_toStartOf="@+id/tvDialogPersonName"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogPersonName" />

    <Button
        android:id="@+id/btnDialogClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/okay_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvDialogPersonContact"
        app:layout_constraintStart_toStartOf="@+id/tvDialogPersonContact"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogPersonContact" />
</androidx.constraintlayout.widget.ConstraintLayout>